--- a/aulas/package.json
+++ b/aulas/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.4.1",
+    "react-router-dom": "^7.4.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
@@ -16,8 +18,8 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
-    "typescript": "^4.9.5",
-    "react-scripts": "5.0.1"
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
